# pyfilter

./: .gitignore  docker-compose.yaml  readme.md  requirements.txt  setup.py
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py  routes.py  startup.py
api/app/processing/: __init__.py  models.py
audio/: __main__.py  speech_to_text_core.py
audio_censor/: INSTALL  sound.py
auio_censor/: models.py  sound.py
blur/: blur.py  models.py  requirements.txt
censor/: censor.py
censor/audio_censor/: models.py  requirements.txt  sound.py
censor/blur/: blur.py
pyfilter_audio/: .gitignore  __init__.py  __main__.py  audio_core.py  models.py  ner_module.py  speech_to_text_core.py  speech_to_text_vosk.py
pyfilter_audio/.data/: celebrities.json  celebrities.txt
pyfilter_face_regongition/: core.py
worker/: Dockerfile  pyproject.toml  requirements.txt
worker/.data/: celebrities.txt
worker/service/: __main__.py  __main__.py.save  config.py  models.py  process.py
worker/service/audio/: __main__.py  audio_core.py  ner_module.py  speech_to_text_core.py  speech_to_text_vosk.py
worker/service/censor/: censor.py  requiremets.txt
worker/service/censor/audio_censor/: sound.py
worker/service/censor/blur/: blur.py
worker/service/pyfilter_audio/: __init__.py  __main__.py  audio_core.py  models.py  speech_to_text_vosk.py
worker/service/video/: __init__.py  core.py
