[tool.poetry]
name = "zber-filter-api"
version = "0.1.0"
description = ""
authors = ["NussstMisis Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
pydantic = "^1.8.2"
aiohttp = "^3.7.4"
aioredis = "^2.0.0"
tenacity = "^8.0.1"
aio-pika = "^6.8.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
