[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["NussstMissis"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis = "^2.0.0"
aioboto3 = "^9.2.2"
aio-pika = "^6.8.0"
aiohttp = "^3.7.4"
tenacity = "^8.0.1"
loguru = "^0.5.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
